--- a/Final Project/pages/homepage/index.html
+++ b/Final Project/pages/homepage/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header>
+        <!--revisit logo-->
         <div class="logo">
             <img id="image1" src="/Final Project/assets/photos/5a1d2106493434.3203065915118584382999.png" width="150px" height="200px">
             <img id="image2" src="/Final Project/assets/photos/Welcome to Fright Train (1).png" alt="banner">
