--- a/Final Project/pages/homepage/index.html
+++ b/Final Project/pages/homepage/index.html
@@ -21,8 +21,8 @@
             <img id="image3" src="/Final Project/assets/photos/5a1d2106493434.3203065915118584382999.png" width="150px" height="200px">
         </div>
         <div class="cart">
-            <button id="btn_cart" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">Cart (<span class="total-count"></span>)</button>
-            <button id="btn_clear_cart">Clear Cart</button>
+            <button id="btn_cart" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart" onclick="viewCart()">Cart (<span class="total-count"></span>)</button>
+            <button id="btn_clear_cart" onclick="clearCart()">Clear Cart</button>
         </div>
     </header>
     <nav>
