added checkout button

--- a/Final Project/pages/homepage/checkout.html
+++ b/Final Project/pages/homepage/checkout.html
@@ -19,7 +19,7 @@
         </div>
         <div class="cart">
             <button id="btn_cart" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart" onclick="viewCart()">
-                <a href="checkout.html">Cart (<span class="total-count"></span>)</a>
+                Cart (<span class="total-count"></span>)
             </button>
             <button id="btn_clear_cart" onclick="clearCart()">Clear Cart</button>
         </div>
