--- a/Final Project/pages/shippingpage/shippinginfo.html
+++ b/Final Project/pages/shippingpage/shippinginfo.html
@@ -18,7 +18,7 @@
         </div>
         <div class="cart">
             <button id="btn_cart" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart" onclick="viewCart()">
-                <a href="checkout.html">Cart (<span class="total-count"></span>)</a>
+                Cart (<span class="total-count"></span>)
             </button>            
             <button id="btn_clear_cart">Clear Cart</button>
         </div>
