add to cart js updated

--- a/Final Project/pages/homepage/index.html
+++ b/Final Project/pages/homepage/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="cart">
             <button id="btn_cart" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">
-                Cart (<span class="total-count"></span>)
+                Cart <div id="cart-count"></div>
             </button>
             <button id="btn_clear_cart" onclick="clearCart()">Clear Cart</button>
         </div>
