add to cart button updated once clicked

--- a/Final Project/pages/homepage/index.html
+++ b/Final Project/pages/homepage/index.html
@@ -60,6 +60,7 @@
     </div>
     <div class="shop_container">
         <ul id="dvd_list">
+            <!--title, img, year, quantity, price, add to cart and remove from cart button-->
         </ul>
     </div>
     <!--Pagination-->
