--- a/Final Project/pages/homepage/index.html
+++ b/Final Project/pages/homepage/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="shop_container">
         <ul id="dvd_list">
-            <!--title, img, year, quantity, price, add to cart and remove from cart button-->
+            <!--title, img, year, quantity, price, add to cart button-->
         </ul>
     </div>
     <!--Pagination-->
