--- a/pages/aboutpage/about.html
+++ b/pages/aboutpage/about.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <div class="logo">
-            <img id="image1" src="/Final Project/assets/photos/5a1d2106493434.3203065915118584382999.png" width="150px" height="200px">
-            <img id="image2" src="/Final Project/assets/photos/Welcome to Fright Train (1).png" alt="banner">
-            <img id="image3" src="/Final Project/assets/photos/5a1d2106493434.3203065915118584382999.png" width="150px" height="200px">
+            <img id="image1" src="../../assets/photos/5a1d2106493434.3203065915118584382999.png" width="150px" height="200px">
+            <img id="image2" src="../../assets/photos/Welcome to Fright Train (1).png" alt="banner">
+            <img id="image3" src="../../assets/photos/5a1d2106493434.3203065915118584382999.png" width="150px" height="200px">
         </div>
         <div class="cart">
             <button id="btn_cart" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart" onclick="viewCart()">
@@ -25,18 +25,10 @@
     </header>
     <nav>
         <ul class="nav-links">
-            <li>
-                <a href="/Final Project/pages/homepage/index.html">Shop</a>
-            </li>
-            <li>
-                <a href="/Final Project/pages/aboutpage/about.html">About Us</a>
-            </li>
-            <li>
-                <a href="/Final Project/pages/shippingpage/shippinginfo.html">Shipping Info</a>
-            </li>
-            <li>
-                <a href="/Final Project/pages/contactpage/contact.html">Contact Us</a>
-            </li>
+                <a href="../homepage/index.html">Shop</a>
+                <a href="../aboutpage/about.html">About Us</a>
+                <a href="../shippingpage/shippinginfo.html">Shipping Info</a>
+                <a href="../contactpage/contact.html">Contact Us</a>
         </ul>
     </nav>
     <div class="container">
@@ -53,13 +45,13 @@
         </div>
         <div class="contacts">
             <div class="facebook">
-                <a href="https://facebook.com"><img src="/Final Project/assets/icons/fbicon.png" width="48px" height="48px"></a>
+                <a href="https://facebook.com"><img src="../../assets/icons/fbicon.png" width="48px" height="48px"></a>
             </div>
             <div class="instagram">
-                <a href="https://instagram.com"><img src="/Final Project/assets/icons/icons8-instagram-48.png" width="48px" height="48px"></a>
+                <a href="https://instagram.com"><img src="../../assets/icons/icons8-instagram-48.png" width="48px" height="48px"></a>
             </div>
             <div class="twitter">
-                <a href="https://twitter.com"><img src="/Final Project/assets/icons/icons8-twitter-48.png" width="48px" height="48px"></a>
+                <a href="https://twitter.com"><img src="../../assets/icons/icons8-twitter-48.png" width="48px" height="48px"></a>
             </div>
         </div>
     </footer>
