--- a/pages/aboutpage/about.html
+++ b/pages/aboutpage/about.html
@@ -25,7 +25,7 @@
     </header>
     <nav>
         <ul class="nav-links">
-                <a href="../homepage/index.html">Shop</a>
+                <a href="/index.html">Shop</a>
                 <a href="../aboutpage/about.html">About Us</a>
                 <a href="../shippingpage/shippinginfo.html">Shipping Info</a>
                 <a href="../contactpage/contact.html">Contact Us</a>
